--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,10 @@ body {
     text-wrap: balance;
   }
 }
+
+/* .custom-image{
+  background-image: url('../../HACKATHON-1/public/homepage/hero.jpg');
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} */
